--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -9,12 +9,16 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@v2
-    - name: Build Docker image
-      run: docker build --tag mactavishediting/latex:latest --tag mactavishediting/latex:${GITHUB_SHA:0:4} .
     - name: Clone template
       run: git clone https://github.com/mactavishediting/latex_template.git
+    - name: Path to working directory
+      run: pwd
+    - name: Path to latex_template
+      run: cd latex_template && pwd
+    - name: Build Docker image
+      run: docker build --tag mactavishediting/latex:latest --tag mactavishediting/latex:${GITHUB_SHA:0:4} .
     - name: Verify we can build the PDF
-      run: docker run --volume ./latex_template/paper.tex:/workdir/paper.tex mactavishediting/latex:latest make
+      run: docker run --volume latex_template/paper.tex:/workdir/paper.tex mactavishediting/latex:latest make
     - name: Docker log-in
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
