--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,9 +12,9 @@ jobs:
     - name: Build Docker image
       run: docker build --tag mactavishediting/latex:latest --tag mactavishediting/latex:${GITHUB_SHA:0:4} .
     - name: Clone template
-      run: git clone https://github.com/mactavishediting/latex_template.git
+      run: git clone https://github.com/mactavishediting/paper.tex.git
     - name: Verify we can build the PDF
-      run: docker run --volume ${PWD}/latex_template/paper.tex:/workdir/paper.tex mactavishediting/latex:latest make
+      run: docker run --volume ${PWD}/paper.tex/paper.tex:/workdir/paper.tex mactavishediting/latex:latest make
     - name: Docker log-in
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
