--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -14,7 +14,14 @@ jobs:
     - name: Clone template
       run: git clone https://github.com/mactavishediting/paper.tex.git
     - name: Verify we can build the PDF
-      run: docker run --volume ${PWD}/paper.tex/paper.tex:/workdir/paper.tex mactavishediting/latex:latest make
+      run: docker run --name latex --volume ${PWD}/paper.tex/paper.tex:/workdir/paper.tex mactavishediting/latex:latest make
+    - name: Copy the PDF
+      run: docker cp latex:/workdir/paper.pdf $PWD
+    - name: Save the PDF
+      uses: actions/upload-artifact@v3
+      with:
+        name: paper
+        path: paper.pdf
     - name: Docker log-in
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
